caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/unclosed_extends_bracket.caffeine
Blueprints
  "test" success_rate(x) extends [_base:
    Requiring { env: String }
    signals { value: "x" }
